new components with routing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.left-col-login {
+/* .left-col-login {
   background-color: rgb(7, 127, 226);
   height:100vh;
 }
@@ -22,4 +22,8 @@
 .right-col-login > .login-form {
   margin: 45% auto;
   width: 60%;
-}
+} */
+
+/* <!-- PANEL LOGOWANIA ZAKONCZONY --> */
+
+
