--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="wrapper">
   <div class="row">
     <div class="col-xs-6 left-col-login">
       <h2>This is your favorite login panel!</h2>
@@ -13,16 +13,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+<!-- PANEL LOGOWANIA ZAKONCZONY -->
 
-
-
-<!-- <form class="form-signin">       
-  <h2 class="form-signin-heading">Please login</h2>
-  <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
-  <input type="password" class="form-control" name="password" placeholder="Password" required=""/>      
-  <label class="checkbox">
-    <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-  </label>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
-</form> -->
+<app-user-panel>
+  
+</app-user-panel>
