logowanie/rejestrowanie podlaczone pod firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,3 @@
-<!-- <div class="wrapper">
-  <div class="row">
-    <div class="col-xs-6 left-col-login">
-      <h2>This is your favorite login panel!</h2>
-      <p>Just come in and check, what it is about!</p>
-    </div>
-    <div class="col-xs-6 right-col-login">
-      <div class="login-form">
-        <h2>Please login</h2>
-        <input type="text" class="form-control" name="username" placeholder="Email address"/>
-        <input type="password" class="form-control" name="password" placeholder="Password"/>
-        <button class="btn btn-primary btn-block" type="submit">Login</button>
-      </div>
-    </div>
-  </div>
-</div> -->
-<!-- PANEL LOGOWANIA ZAKONCZONY -->
-
-<app-user-panel>
-  
-</app-user-panel>
+<!-- <app-user-panel></app-user-panel> -->
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
