--- a/src/app/user-panel/profile/profile.component.html
+++ b/src/app/user-panel/profile/profile.component.html
@@ -1,3 +1,93 @@
-<p>
-  profile works!
-</p>
+<div class="container-fluid">
+  <div class="header">
+    <h2 class="header-element">Profile</h2>
+    <button class="btn btn-primary btn-edit header-element">Edit</button>
+  </div>
+  <div class="row profile-container">
+      <div class="col-xs-6 profile profile-picture">
+          <img src="http://lorempixel.com/400/200/" class="img-fluid img-responsive" alt="profile-picture">
+      </div>
+      <div class="col-xs-6 profile">
+        <div class="profile-details">
+       <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        {{personalInfo.name}} {{personalInfo.surname}} 
+        </div>
+        <div class="profile-details">
+        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        {{personalInfo.address}}
+      </div>
+      <div class="profile-details">
+       <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 
+       {{personalInfo.email}}
+      </div>
+      <div class="profile-details">
+       <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+       {{personalInfo.page}}
+      </div>
+      <div class="profile-details">
+       <span class="glyphicon glyphicon-gift" aria-hidden="true"></span> 
+       {{personalInfo.birthday}}
+      </div>
+        <div class="btn-group profile-details">
+            <button type="button" class="btn btn-primary">
+                Social</button>
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span><span class="sr-only">Social</span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="https://www.google.pl">LinkedIn</a></li>
+                <li><a href="#">Github</a></li>
+                <li><a href="https://www.facebook.com/jquery2dotnet">Facebook</a></li>
+            </ul>
+        </div>
+      </div>
+    </div>
+</div>
+
+
+  
+
+  
+  
+  
+  <!-- <div class="container">
+      <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+              <div class="well well-sm">
+                  <div class="row">
+                      <div class="col-sm-6 col-md-4">
+                          <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
+                      </div>
+                      <div class="col-sm-6 col-md-8">
+                          <h4>
+                              Bhaumik Patel</h4>
+                          <small><cite title="San Francisco, USA">San Francisco, USA <i class="glyphicon glyphicon-map-marker">
+                          </i></cite></small>
+                          <p>
+                              <i class="glyphicon glyphicon-envelope"></i>email@example.com
+                              <br />
+                              <i class="glyphicon glyphicon-globe"></i><a href="http://www.jquery2dotnet.com">www.jquery2dotnet.com</a>
+                              <br />
+                              <i class="glyphicon glyphicon-gift"></i>June 02, 1988</p>
+                          <!-- Split button -->
+                          <!-- <div class="btn-group">
+                              <button type="button" class="btn btn-primary">
+                                  Social</button>
+                              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                                  <span class="caret"></span><span class="sr-only">Social</span>
+                              </button>
+                              <ul class="dropdown-menu" role="menu">
+                                  <li><a href="#">Twitter</a></li>
+                                  <li><a href="https://plus.google.com/+Jquery2dotnet/posts">Google +</a></li>
+                                  <li><a href="https://www.facebook.com/jquery2dotnet">Facebook</a></li>
+                                  <li class="divider"></li>
+                                  <li><a href="#">Github</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div> -->
