--- a/src/app/user-panel/user-panel.component.css
+++ b/src/app/user-panel/user-panel.component.css
@@ -8,5 +8,14 @@
 }
 
 .glyphicon {
-  margin: 0 5px;
+  margin: 0px 0px;
+}
+
+.user-card {
+  background-color: #f3f3f3;
+  margin: 5vh auto;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0   rgba(0,0,0,.12);
+  border-radius: 2px;
 }
