--- a/src/app/user-panel/panel-info/panel-info.component.html
+++ b/src/app/user-panel/panel-info/panel-info.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid content-wrapper">
-  <h2>Welcome to our world! You can see what you want here, this is your user panel!</h2>
+  <h2>This is your panel, You can change everything!</h2>
 </div>
