--- a/src/app/user-panel/profile/profile.component.html
+++ b/src/app/user-panel/profile/profile.component.html
@@ -10,23 +10,23 @@
       <div class="col-xs-6 profile">
         <div class="profile-details">
        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-        {{personalInfo.name}} {{personalInfo.surname}} 
+        {{personalInfo["name"]}} {{personalInfo["surname"]}} 
         </div>
         <div class="profile-details">
         <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-        {{personalInfo.address}}
+        {{personalInfo["address"]}}
       </div>
       <div class="profile-details">
        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 
-       {{personalInfo.email}}
+       {{personalInfo["email"]}}
       </div>
       <div class="profile-details">
        <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-       {{personalInfo.page}}
+       {{personalInfo["page"]}}
       </div>
       <div class="profile-details">
        <span class="glyphicon glyphicon-gift" aria-hidden="true"></span> 
-       {{personalInfo.birthday}}
+       {{personalInfo["birthday"]}}
       </div>
         <div class="btn-group profile-details">
             <button type="button" class="btn btn-primary">
