--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         <app-signin [showMePartially1]="showVar1"></app-signin>
         <app-signup [showMePartially]="showVar"></app-signup>
       <!-- </div> -->
-      <p>If u don't have an accout yet. Click here!</p>
+      <p>{{ message }}</p>
       <button class="btn btn-primary btn-block" type="submit" (click)="toggleChild()">{{ name }}</button>
       </div>
     </div>
