--- a/src/app/user-panel/about/about.component.html
+++ b/src/app/user-panel/about/about.component.html
@@ -1,3 +1,12 @@
 <div class="container-fluid">
-  <h2>About</h2>
+  <div class="row col-xs-3">
+  <h2 class="header-element">About</h2>
+  <button class="btn btn-primary btn-edit header-element" (click)="addPost()">Add post</button>
+  </div>
+  
+  <div class="row col-xs-10">
+    <p>dsadasd</p>
+  </div>
 </div>
+
+  
