--- a/src/app/user-panel/profile/profile.component.html
+++ b/src/app/user-panel/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="header">
     <h2 class="header-element">Profile</h2>
-    <button class="btn btn-primary btn-edit header-element">Edit</button>
+    <button class="btn btn-primary btn-edit header-element" (click)="edit()">Edit</button>
   </div>
   <div class="row profile-container">
       <div class="col-xs-6 profile profile-picture">
