--- a/src/app/user-panel/about/about.component.html
+++ b/src/app/user-panel/about/about.component.html
@@ -8,15 +8,15 @@
   <form #postForm="ngForm">
     <div class="form-group">
       <label for="header" class="post-header">Header</label>
-      <input [maxLength]="inputLength" class="post-content" [(ngModel)]="newPost.header" name="header">
+      <input required [maxLength]="inputLength" class="post-content" [(ngModel)]="newPost.header" name="header">
     </div>
 
     <div class="form-group">
       <label for="content" class="post-header">Content</label>
-      <textarea [maxLength]="textareaLength" class="post-content" rows="4" [(ngModel)]="newPost.content" name="content"></textarea>
+      <textarea required [maxLength]="textareaLength" class="post-content" rows="4" [(ngModel)]="newPost.content" name="content"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-edit" (click)="addPost()">Add post</button>
+    <button type="reset" class="btn btn-primary btn-edit" (click)="addPost()" [disabled]="!postForm.form.valid">Add post</button>
 
   </form>
   </div>
