--- a/src/app/user-panel/about/about.component.scss
+++ b/src/app/user-panel/about/about.component.scss
@@ -15,11 +15,13 @@
 .post-header{
   margin-top: 10px;
 }
+
 .post-wrapper {
   margin-top: 50px;
   background-color: $light-gray;
   margin: 10px;
-  width: 50%;
+  min-width: 250px;
+  width: 70%;
   height: 100%;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0   rgba(0,0,0,.12);
   border-radius: 2px;
@@ -31,6 +33,6 @@
     padding: 0;
   }
   .btn-delete {
-    margin-bottom: 30px;
+    margin: 10px 0 50px 0;
   }
 }
