--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,8 @@
 @import '../../assets/variables.scss';
 
+.wrapper {
+  height: 100vh;
+}
 .left-col-login {
   background-color: $blue;
   height:100vh;
@@ -16,16 +19,9 @@
   background-color:	$very-light-blue;
   height:100vh;
   .login-form {
-    margin: 40% auto;
+    margin: 30% auto;
     width: 60%;
   }
-}
-
-.login-card {
-  width: 100%;
-  height: 100%;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0   rgba(0,0,0,.12);
-  border-radius: 2px;
 }
 
 
